Bug 1770335 - Fix MWasmShuffleSimd128::congruentTo logic. r=jseward a=pascalc

The implementation was incomplete. It is possible to have the same
control data field in the SimdShuffle. The ValueNumberer algorithm
wrongfully merging non-congruent values.

Compare all SimdShuffle fields, including opd, permuteOp, and shuffleOp.

Differential Revision: https://phabricator.services.mozilla.com/D148569